<resources>
    <string name="app_name">SiTernak</string>
    <string name="title_home">Home</string>
    <string name="title_laporan">Request</string>
    <string name="title_profile">Profile</string>
    <string name="loginTitleTextView">Masuk</string>
    <string name="loginDescTextView">Selamat datang di <font style='bold'><b>SiTernak!</b></font>\ Masuk untuk memulai perjalananmu dengan kami.</string>
    <string name="login_edit_kata_sandi">Kata Sandi</string>
    <string name="login_edit_email">Email</string>
    <string name="registerTextTitleView">Daftar</string>
    <string name="registerDescTextView">Sebelum menggunakan layanan aplikasi, isi informasi dirimu dulu, ya!</string>
    <string name="hint_province">Pilih Provinsi</string>
    <string name="hint_city">Pilih Kabupaten/Kota</string>
    <string name="hint_kecamatan">Pilih Kecamatan</string>
    <string name="blank_data">------------</string>
    <string name="title_activity_empty">EmptyActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>